# function-encoder

./: .gitignore  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml
examples/: kepler.py  kepler_pca.py  online_adaptation_rls.py  operator_b2b_linear.py  operator_b2b_nonlinear.py  polynomial.py  polynomial_matryoshka.py  polynomial_pca.py  polynomial_progressive.py  polynomial_residual.py  van_der_pol.py  van_der_pol_eval.py  van_der_pol_eval_compare.py  van_der_pol_pca.py  van_der_pol_rls.py  van_der_pol_speedup.py  van_der_pol_train_then_prune.py
examples/datasets/: derivative_operator.py  kepler.py  polynomial.py  van_der_pol.py
examples/spot_v2d/: v2d_fe_fwd_plot.py  v2d_fe_fwd_train.py  v2d_fe_inv_train.py
function_encoder/: __init__.py  coefficients.py  function_encoder.py  inner_products.py  losses.py
function_encoder/model/: mlp.py  neural_ode.py
function_encoder/utils/: training.py
function_encoder_torch/: coefficients.py  function_encoder.py  losses.py
function_encoder_torch/model/: mlp.py
function_encoder_torch/utils/: training.py
