[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "function_encoder"
version = "0.0.1"
description = "Function encoder implementation in PyTorch."
readme = "README.md"

dependencies = [
    "numpy>=2.2.2",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
jax = ["function-encoder-jax @ git+https://github.com/ajthor/function-encoder-jax.git"]