[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "function_encoder"
description = "Function encoder implementation in PyTorch."
readme = "README.md"
dynamic = ["version"]

dependencies = [
    "numpy>=2.2.2",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
jax = ["function-encoder-jax @ git+https://github.com/ajthor/function-encoder-jax.git"]

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"
fallback_version = "0.0.0"
